# Antifragile

./: README.md
Skills/API/: skill.md
backend/: main.py  pyproject.toml
backend/src/models/: User.py
backend/src/server/: __init__.py  main.py
backend/src/server/api/: Singup.py  google_auth.py  user_routes.py  users.py
backend/src/server/api/routes/: auth.py
backend/src/server/core/: Auth.py  auth.py  config.py  security.py  supabase_client.py
backend/src/server/crud/: user.py
backend/src/server/database/: Session.py  config.py  dbConnection.py
backend/src/server/models/: User.py  user.py
backend/src/server/services/: auth_service.py  user_service.py
backend/tests/: test_create_user.py
frontend/app/: .dockerignore  .gitignore  Dockerfile  compose.dev.yaml  compose.yaml  next.config.ts  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.json  vitest.config.ts
frontend/app/e2e/: auth-guard.spec.ts  public-pages.spec.ts  smoke.spec.ts
frontend/app/src/: proxy.ts
frontend/app/src/app/: globals.css  layout.tsx  page.tsx
frontend/app/src/app/(dashboard)/: page.tsx
frontend/app/src/app/(public)/: globals.css  layout.tsx  page.tsx
frontend/app/src/app/about/: page.tsx
frontend/app/src/app/auth/: actions.ts
frontend/app/src/app/dashboard/: layout.tsx  page.tsx
frontend/app/src/app/google-login/: GoogleLoginDemo.tsx  page.tsx
frontend/app/src/components/: footer.tsx
frontend/app/src/context/: journal-context.tsx
frontend/app/src/google-login/: GoogleLoginDemo.tsx
frontend/app/src/hooks/: useGoogleSignIn.ts
frontend/app/src/lib/: pricing.ts
frontend/app/tests/: setup.tsx
frontend/app/tests/components/: journal-context.test.tsx
frontend/app/tests/integration/: contact-action.test.ts  journal-action.test.ts  journal-route.test.ts
(+46 files in other folders)
