[project]
name = "server"
version = "0.1.0"
description = ""
authors = [
    {name = "Prashmin Gurung",email = "prashmingrg@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "sqlmodel (>=0.0.27,<0.0.28)"
]

[tool.poetry]
packages = [{include = "server", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
